<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".pagina_2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_Registro"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="50dp"
        android:textSize="30dp"
        />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginVertical="40dp"
        android:hint="@string/lbl_usuario"
        android:textColorHint="#546E7A"
        tools:ignore="TouchTargetSizeCheck"/>

    <EditText
        android:id="@+id/txtNombreCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/lbl_nombreCompleto"
        android:textColorHint="#546E7A"
        tools:ignore="TouchTargetSizeCheck"/>

    <EditText
        android:id="@+id/txtContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/lbl_contra"
        android:inputType="textPassword"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txtRepiteContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/lbl_Repitecontra"
        android:inputType="textPassword"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textPreguntaSecreta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_PreguntaSecreta"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="50dp"
        android:textSize="20dp"
        android:layout_marginVertical="30dp"
        />

    <Spinner
        android:id="@+id/planets_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0dp"
        android:layout_marginLeft="1px"
        android:layout_marginRight="0dp"
        android:layout_marginHorizontal="200px"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/textAutentificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_Autentificar"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20dp"
        />

    <RadioButton
        android:id="@+id/btn_si"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="#BA0303"
        android:text="SI" />


    <RadioButton
        android:id="@+id/btn_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="5dp"
        android:buttonTint="#AC1A1A"
        android:text="No" />

    <Button
        android:id = "@+id/btn_Aceptar"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/btn_aceptar"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>
</LinearLayout>
