<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        app:srcCompat="@drawable/ic_baseline_person_24"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/lbl_usuario"
        android:textColorHint="#546E7A"
        tools:ignore="TouchTargetSizeCheck"/>

    <EditText
        android:id="@+id/txtContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/lbl_contra"
        android:inputType="textPassword"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <Button
        android:id = "@+id/btnValidar"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/btn_autenticar"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <Button
        android:id = "@+id/btn_registrate"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/btn_registrar"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>